--- a/Css/Style.css
+++ b/Css/Style.css
@@ -103,23 +103,26 @@ li {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.836);
     color: #fff;
 }
-img{
-    background-color: #04185a;
-   width: 8vw;
-   height: 50vh;
-  
-}
-.card.imagens{
-    width: 45vh;
-    margin-top: 40px;
-    margin-left: 7.5%;
-    display: flex;
+
+.card{
+    width: 300px;
+    height: 500px;
     float: left;
-    box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.836);
-    -webkit-transition: -webkit-transform .5s ease;
-   transition: transform .5s ease;
-   
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    box-shadow: 10px 10px 10px 2px rgba(0, 0, 0, 0.836);
 }
+.card-img-top{
+    width: 8vw;
+    height: 60vh;
+
+}
+#lista-filme{
+margin-left: 90px;
+margin-bottom: 70px;
+}
+
 .imagens:hover{
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
