--- a/Css/Style.css
+++ b/Css/Style.css
@@ -136,6 +136,26 @@ margin-bottom: 80px;
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
+.principal{
+    margin-bottom: 0;
+    padding-top: 85px;
+}
+.novaimagem{
+    display: inline-block;
+    float: left;
+    margin-left: 50px;
+}
+.detalhes{
+    display: inline-block;
+    margin-left: 50px;
+    margin-bottom: 50px;
+}
+.card-text{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.card-titulo{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 .titulo{
     height: 3vh;
     margin-left: 2%;
