--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: #d3caca
+    background-color: #c2bfbf
 }
 body{
     padding: 0;
@@ -109,7 +109,7 @@ li {
     height: 500px;
     float: left;
     margin-top: 20px;
-    margin-left: 30px;
+    margin-left: 40px;
     margin-right: 30px;
     margin-bottom: 70px;
     box-shadow: 10px 10px 10px 2px rgba(0, 0, 0, 0.836);
@@ -147,6 +147,8 @@ margin-bottom: 80px;
 }
 .detalhes{
     display: inline-block;
+    width: 60vw;
+    margin-top: 4%;
     margin-left: 50px;
     margin-bottom: 50px;
 }
@@ -154,11 +156,27 @@ margin-bottom: 80px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .card-titulo{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 .titulo{
     height: 3vh;
     margin-left: 2%;
+}
+#btnSalvar{
+    margin-right: 10%;
+    margin-left: 6%;
+    border-radius: 15%;
+}
+#btnSalvar:hover{
+    background-color: #04185a;
+    color: #fff;
+}
+#btnFechar{
+    border-radius: 15%;
+}
+#btnFechar:hover{
+    background-color: #04185a;
+    color: #fff;
 }
 .form-check{
     background-color: transparent;
