--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,32 +1,32 @@
-*{
-    background-color: #c2bfbf
+html{
+    background-color: #1c1c28;
 }
 body{
     padding: 0;
     margin: 0;
 }
-#logo{
-    background-color: #04185a;
-    height: 10vh;
-    width: 6vw;
-    margin-top: 0.5%;
+#header{
+    background-color: #1c1c28;
+}
+.logo{
+    height: 5vh;
+    width: 15vw;
+    display: inline-block;
     margin-left: 5%;
-    display: flex;
-    float: left;
 }
-.escreve{
-    background-color: #04185a;
+.escreve .container-fluid {
+    display: inline-block;
 }
-#ini{
+.ini{
     height: 12vh;
-    background-color: #04185a;
+    background-color: #1c1c28;
     width: 100%;
    position: fixed;
    z-index: 1;
-   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.836);
+   box-shadow: 2px 2px 2px 1px #f39256;
 }
 .d-flex{
-    background-color: #04185a;
+    background-color: #1c1c28;
 }
 #imag{
     width: 5vw;
@@ -34,9 +34,10 @@ body{
     margin-left: 5%;
     
 }
-.pesquisa{
+.navbar.pesquisa{
     width: 28vw;
-    margin-left: 35%;
+    margin-left: 20%;
+    display: inline-block;
 }
 .form-control{
    margin-top: 4%;
@@ -45,18 +46,17 @@ body{
 .btn.butao{
     margin-top: 4%;
     height: 6vh;
-    background-color: #04185a;
-    color: #d3caca;
+    color: #f39256;
     border-radius: 10%;
-    border-color: #fff;
+    border-color: #f39256;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .btn.butao:hover{
     cursor: pointer;
     opacity: 0.8;
-    color: #04185a;
-    background-color: #d3caca;
-    border-color: #ffffff;
+    color: #fff;
+    background-color: #f39256;
+    border-color: #f39256;
 }
 .novo{
     width: 20vw;
@@ -68,34 +68,34 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .botao {
-    background-color: #04185a;
-    color: #fff;
-    margin-top: 8%;
+    background-color: #1c1c28;
+    color: #f39256;
+    margin-top: 10%;
     margin-left: 70px;
     border-radius: 0.475rem;
     font-size: larger;
-    border-color: #fff;
+    border-color: #f39256;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 li {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   background-color: #04185a;
+   background-color: #1c1c28;
 }
 .lista {
     display: block;
     width: 100%;
     padding: 0.375rem;
-    background-color: #04185a;
+    background-color: #1c1c28;
     clear: both;
     font-weight: 400;
     text-decoration: none;
     border: 0;
    border-radius: 0.375rem;
-    color: #fff;
+    color: #f39256;
 }
 .lista:hover{
-    background-color: #d3caca;
-    color: #04185a;
+    background-color: #f39256;
+    color: #1c1c28
 }
 .dropdown-menu.show{
     padding: 0;
@@ -109,15 +109,24 @@ li {
     height: 500px;
     float: left;
     margin-top: 20px;
-    margin-left: 40px;
-    margin-right: 30px;
+    margin-left: 30px;
+    margin-right: 25px;
     margin-bottom: 70px;
-    box-shadow: 10px 10px 10px 2px rgba(0, 0, 0, 0.836);
+    color: #f39256;
+    box-shadow: 8px 8px 8px 2px #f39256;
+}
+.card:hover{
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: transform .5s ease;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+.card-body{
+    background-color: #1c1c28;
 }
 .card-img-top{
     width: 8vw;
     height: 55vh;
-
 }
 #lista-filme{
 margin-left: 90px;
@@ -127,14 +136,12 @@ margin-bottom: 80px;
     margin-left: 68%;
     margin-top: 5%;
     border-radius: 14%;
+    background-color: #f39256;
+    color: #1c1c28;
 }
 .btnDetalhesFilme:hover{
-    background-color: #04185a;
-    color: #fff;
-}
-.imagens:hover{
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+    background-color: #1c1c28;
+    color: #f39256;
 }
 .principal{
     margin-bottom: 0;
@@ -142,93 +149,96 @@ margin-bottom: 80px;
 }
 .novaimagem{
     display: inline-block;
-    float: left;
-    margin-left: 50px;
+   float: left;
+}
+.img:hover{
+    transition: transform .5s ease;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 .detalhes{
     display: inline-block;
-    width: 60vw;
+    width: 53vw;
     margin-top: 4%;
-    margin-left: 50px;
-    margin-bottom: 50px;
+    margin-left: 3%;
+ 
 }
 .card-text{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #f39256;
 }
-.card-titulo{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+h5.card-title{
+    margin-bottom: 2%;
+    color: #f39256;
+}
+main{
+    background-color: #1c1c28;
 }
 .titulo{
     height: 3vh;
     margin-left: 2%;
+    background-color: #f39256;
+    color: #1c1c28;
 }
 #btnSalvar{
-    margin-right: 10%;
-    margin-left: 6%;
+    margin-right: 5%;
+    margin-left: 2%;
     border-radius: 15%;
+    background-color: #f39256;
+    color: #1c1c28;
+}
+#btnDesfa{
+    margin-right: 5%;
+    margin-left: 2%;
+    border-radius: 15%;
+    background-color: #f39256;
+    color: #1c1c28;
+    margin-top: 10%;
+ 
+}
+#btnDesfa:hover{
+    background-color: #1c1c28;
+    color: #f39256;
 }
 #btnSalvar:hover{
-    background-color: #04185a;
-    color: #fff;
+    background-color: #1c1c28;
+    color: #f39256;
 }
 #btnFechar{
     border-radius: 15%;
+    background-color: #f39256;
+    color: #1c1c28;
 }
 #btnFechar:hover{
-    background-color: #04185a;
-    color: #fff;
-}
-.form-check{
-    background-color: transparent;
-    margin-top: -10%;
-    margin-left: 90%;
-
-}
-footer{
-    background-color: #04185a;
-    margin-top: 10%;
-    width: 50vw;
-    height: 30vh;
+    background-color: #1c1c28;
+    color: #f39256;
 }
 #flexCheckIndeterminate{
     background-color:  #ffc107;
 }
+
 @media(max-width:864px){
     .botao{
         margin-top: 12%;
     }
-    #logo{
-        height: 8vh;
-        width: 7vw;
-        margin-top: 1%;
-    }
+   
 }
 @media(max-width:586px){
     .botao{
         margin-top: 18%;
     }
-    #logo{
-        width: 10vw;
-        margin-top: 1.5%;
-    }
+
 }
 @media(max-width:410px){
     .botao{
         margin-top: 25%;
     }
-    #logo{
-        width: 15vw;
-        margin-top: 2%;
-    }
+ 
 }
 @media(max-width:294px){
     .botao{
         margin-top: 35%;
     }
-    #logo{
-        height: 7vh;
-        width: 15vw;
-        margin-top: 2%;
-    }
+   
 }
 
