--- a/Css/Style.css
+++ b/Css/Style.css
@@ -182,6 +182,13 @@ main{
     color: #1c1c28;
 }
 #btnSalvar{
+    margin-right: 2%;
+    margin-left: 2%;
+    border-radius: 15%;
+    background-color: #f39256;
+    color: #1c1c28;
+}
+#btnEditar{
     margin-right: 5%;
     margin-left: 2%;
     border-radius: 15%;
@@ -189,13 +196,28 @@ main{
     color: #1c1c28;
 }
 #btnDesfa{
-    margin-right: 5%;
-    margin-left: 2%;
+    margin-right: 3%;
+    margin-left: 1%;
     border-radius: 15%;
     background-color: #f39256;
     color: #1c1c28;
     margin-top: 10%;
- 
+}
+#btnSalvarF{
+    margin-right: 3%;
+    margin-left: 1%;
+    border-radius: 15%;
+    background-color: #f39256;
+    color: #1c1c28;
+    margin-top: 10%;
+}
+#btnSalvarF:hover{
+    background-color: #1c1c28;
+    color: #f39256;
+}
+#btnEditar:hover{
+    background-color: #1c1c28;
+    color: #f39256;
 }
 #btnDesfa:hover{
     background-color: #1c1c28;
